# draccus

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AGENTS.md  DESIGN.md  README.md  mise.toml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: coco-delegation.mdc
.trae/: COCO_MODELS.md
.workstream/: INDEX.md
.workstream/bundle-packaging/: design.md  tracker.org
.workstream/experiment-correctness/: design.md  tracker.org
.workstream/release-channels/: design.md  tracker.org
.workstream/repo-commit-cleanup/: design.md  tracker.org
.workstream/repo-hygiene/: design.md  tracker.org
.workstream/runtime-provenance/: design.md  tracker.org
.workstream/single-command-cli/: design.md  tracker.org
.workstream/spack-envs-bootstrap/: design.md  (+1 more)
docs/: coco-cursor-delegation.md  tech-blog-hello-draccus.md  training-substrate-roadmap.md
host-bin/: nvidia-smi
lib/: draccus-bwrap-env.sh  draccus-cli.sh  draccus-doctor.sh  draccus-env.sh  draccus-layout.sh  draccus-notebook.sh  draccus-nvidia-mounts.sh  draccus-project.sh  draccus-run-record.sh  draccus-runtime.sh  draccus-shell.sh  draccus-uv.sh  draccus-view-dir.sh
projects/_template/: .gitignore  .python-version  README.md  draccus.yaml  pyproject.toml
scripts/: bootstrap-rootfs.sh  coco-probe-models.sh  prune-draccus.sh  refresh-spack-lockfiles.sh  starship-version.env  uv-version.env  uv_overrides.txt  validate-all.sh  validate-base-ml.sh  validate-base-sys.sh  validate-project-overlay.sh  validate-static.sh  validate_foundation.py  validate_uv_layering.sh
shims/: pip
(+21 files in other folders)
